--- a/install/lang/english.txt
+++ b/install/lang/english.txt
@@ -36,14 +36,15 @@ ImDisk - Credits
 ● v77: RamDisk Configuration Tool, dialog box using DiscUtils and installer of this package
 ● Kenneth Bell: DiscUtils .NET library
 Translations:
-- Français: v77
-- Español: alacran
-- Svenska: Åke Engelbrektson / Olof Lagerkvist
-- Deutsch: Bodo Thevissen
+- français: v77
+- español: alacran
+- svenska: Åke Engelbrektson / Olof Lagerkvist
+- deutsch: Bodo Thevissen
 - русский: 0x00ffh / Strani
 - 简体中文: Arne Sacnussem
-- Italiano: Ajeje Brazorf
-- Português Brasileiro: Rodolfo Bendinelli
+- italiano: Ajeje Brazorf
+- português brasileiro: Rodolfo Bendinelli
+- suomi: Sampo Hippeläinen
 
 General Settings
 Uninstall
