--- a/install/lang/french.txt
+++ b/install/lang/french.txt
@@ -36,14 +36,15 @@ ImDisk - Crédits
 ● v77 : Outil de Configuration de Ramdisk, boîte de dialogue utilisant DiscUtils et installateur de ce paquet
 ● Kenneth Bell : librairie .NET DiscUtils
 Traductions :
-- Français: v77
-- Español: alacran
-- Svenska: Åke Engelbrektson / Olof Lagerkvist
-- Deutsch: Bodo Thevissen
+- français: v77
+- español: alacran
+- svenska: Åke Engelbrektson / Olof Lagerkvist
+- deutsch: Bodo Thevissen
 - русский: 0x00ffh / Strani
 - 简体中文: Arne Sacnussem
-- Italiano: Ajeje Brazorf
-- Português Brasileiro: Rodolfo Bendinelli
+- italiano: Ajeje Brazorf
+- português brasileiro: Rodolfo Bendinelli
+- suomi: Sampo Hippeläinen
 
 Réglages Généraux
 Désinstaller
