--- a/install/lang/german.txt
+++ b/install/lang/german.txt
@@ -36,14 +36,15 @@ ImDisk - Mitwirkende
 ● v77: RAM-Disk Konfigurator, Dialog Box von DiscUtils und den Installer dieses Pakets
 ● Kenneth Bell: DiscUtils .NET Bibliothek
 Übersetzungen:
-- Français: v77
-- Español: alacran
-- Svenska: Åke Engelbrektson / Olof Lagerkvist
-- Deutsch: Bodo Thevissen
+- français: v77
+- español: alacran
+- svenska: Åke Engelbrektson / Olof Lagerkvist
+- deutsch: Bodo Thevissen
 - русский: 0x00ffh / Strani
 - 简体中文: Arne Sacnussem
-- Italiano: Ajeje Brazorf
-- Português Brasileiro: Rodolfo Bendinelli
+- italiano: Ajeje Brazorf
+- português brasileiro: Rodolfo Bendinelli
+- suomi: Sampo Hippeläinen
 
 Allgemeine Einstellungen
 Deinstallation
