--- a/install/lang/spanish.txt
+++ b/install/lang/spanish.txt
@@ -36,14 +36,15 @@ ImDisk - Créditos
 ● v77: Herramienta de configuración RamDisk, caja de dialogo para usar DiscUtils y el  instalador de este paquete
 ● Kenneth Bell: Librería DiscUtils .NET
 Traducciones:
-- Français: v77
-- Español: alacran
-- Svenska: Åke Engelbrektson / Olof Lagerkvist
-- Deutsch: Bodo Thevissen
+- français: v77
+- español: alacran
+- svenska: Åke Engelbrektson / Olof Lagerkvist
+- deutsch: Bodo Thevissen
 - русский: 0x00ffh / Strani
 - 简体中文: Arne Sacnussem
-- Italiano: Ajeje Brazorf
-- Português Brasileiro: Rodolfo Bendinelli
+- italiano: Ajeje Brazorf
+- português brasileiro: Rodolfo Bendinelli
+- suomi: Sampo Hippeläinen
 
 Ajustes Generales
 Desinstalar
