--- a/install/lang/swedish.txt
+++ b/install/lang/swedish.txt
@@ -36,14 +36,15 @@ ImDisk - Tack!
 ● v77: RamDisk Configuration Tool, dialogruta för att använda DiscUtils och installerare för det här paketet
 ● Kenneth Bell: DiscUtils .NET library
 Översättningar:
-- Français: v77
-- Español: alacran
-- Svenska: Åke Engelbrektson / Olof Lagerkvist
-- Deutsch: Bodo Thevissen
+- français: v77
+- español: alacran
+- svenska: Åke Engelbrektson / Olof Lagerkvist
+- deutsch: Bodo Thevissen
 - русский: 0x00ffh / Strani
 - 简体中文: Arne Sacnussem
-- Italiano: Ajeje Brazorf
-- Português Brasileiro: Rodolfo Bendinelli
+- italiano: Ajeje Brazorf
+- português brasileiro: Rodolfo Bendinelli
+- suomi: Sampo Hippeläinen
 
 Allmänna inställningar
 Avinstallera
