--- a/install/lang/italian.txt
+++ b/install/lang/italian.txt
@@ -10,6 +10,7 @@ Strumento di Configurazione RamDisk
  Opzioni 
 Abilita voci nei menu di scelta rapida
 Crea collegamenti sul desktop
+Scorciatoie per tutti gli utenti
 Carica ImDskSvc automaticamente
 Lingua:
 Tieni il mouse sopra un oggetto per ottenere i dettagli.
@@ -18,6 +19,7 @@ Richiesto per montare formati di file immagine avanzati come VHD, VDI, VMDK e al
 Questo strumento ti permetterà di configurare facilmente uno o più RamDisk con varie impostazioni.
 Aggiungi voci nel menu contestuale dell'unità e nel menu contestuale dei file per gestire i volumi ImDisk e i file immagine direttamente da Esplora risorse.##Questa opzione può essere impostata in un secondo momento nel menu Start di Windows.
 Crea collegamenti sul desktop.##Tutti i collegamenti vengono sempre creati nel menu Start di Windows.
+Crea scorciatoie per tutti gli utenti invece dell'utente corrente.
 Avvia ImDskSvc automaticamente all'avvio del sistema.##Nessuno strumento in questo pacchetto utilizza questo servizio, quindi puoi deselezionare in sicurezza questa opzione.##Viene installato dal driver per avviare connessioni TCP/IP o connessioni alla porta seriale con software proxy.
 Crediti
 Installa
@@ -168,6 +170,7 @@ Errore: il file non contiene un file system valido.
 Errore: impossibile formattare il volume.
 Errore: impossibile montare il volume.
 Copia dei file...
+Errore: i file non possono essere copiati.
 Visualizzazione di una nuova unità...
 Salvataggio parametri...
 Attenzione: troppi punti di montaggio.#Questo non sarà registrato.
@@ -176,13 +179,17 @@ Fatto.
 Smontando volume...
 Sincronizzando...
 
- Variabili di Ambiente TEMP 
- Utente
- Sistema
+Usa Variabili Temporanee
+Utente:
+Sistema:
 Imposta Tutto Su:
+Usa una Junction (consigliato)
+da:
+a:
 Ripristina Predefiniti
 OK
 Cancella
+Errore: non è possibile creare la Junction.
 
 Metodo di Rilascio della Memoria:
 Automatico
