--- a/install/lang/schinese.txt
+++ b/install/lang/schinese.txt
@@ -8,17 +8,19 @@ ImDisk 虚拟驱动器驱动程序 (必要)
 DiscUtils 库 (使用 .NET Framework 4)
 RamDisk 配置工具
  选项 
-启用右键菜单
+添加右键菜单选项
 创建桌面快捷方式
+为所有用户创建快捷方式
 开机启动 ImDskSvc
 语言:
-请将鼠标放在选项上以获取详细信息.
-安装驱动程序。这包括控制面板程序、命令行工具、imdisk.exe，以资源管理器右键菜单。#请在命令提示符中键入“imdisk”以获取详细信息。
-高级映像文件格式支持(如VHD、VDI、VMDK和其他一些格式)。##同时安装命令行工具 DiscUtilsDevio.exe，以及对应的右键菜单功能。
+请将鼠标悬停在选项上以获取详细说明.
+安装驱动程序。这包括控制面板插件、命令行工具、imdisk.exe，以资源管理器右键菜单项。#请在命令提示符中键入“imdisk”以获取详细信息。
+高级镜像文件格式支持(如VHD、VDI、VMDK和其他一些格式)。##同时安装命令行工具 DiscUtilsDevio.exe，以及对应的右键菜单功能。
 此工具将允许您轻松地配置一个或多个具有不同配置的 RamDisk。
 为“驱动器”和“文件”添加右键菜单。##此选项可以稍后在Windows“开始”菜单中设置。
 创建桌面快捷方式。##同时也会在在Windows“开始”菜单中创建快捷方式。
-在系统启动时自动启动ImDskSvc。#此软件包中没有任何工具使用此服务，因此您可以安全地取消选中此选项。#它是由驱动程序负责安装的，用于启动与代理软件的TCP/IP或串行端口连接。
+为所有用户创建快捷方式，而不是只为当前用户创建快捷方式。
+在系统启动时启动ImDskSvc。#此软件包中没有任何工具使用此服务，因此您可以安全地取消选中此选项。#随驱动程序安装，用于启动TCP/IP或串行端口与代理软件的连接。
 贡献者/鸣谢
 安装
 取消
@@ -53,7 +55,7 @@ RamDisk 设置
 挂载镜像文件
 
 挂载为 ImDisk 虚拟磁盘
-保存磁盘内容至镜像文件
+将磁盘内容另存为镜像文件
 卸载 ImDisk 虚拟磁盘
 
 
@@ -62,7 +64,7 @@ ImDisk - 安装
 删除设置
 卸载
 取消
-检测到 ImDisk 虚拟磁盘驱动.#所有的 ImDisk 虚拟磁盘将被卸载!
+检测到 ImDisk 虚拟磁盘.#所有已挂载的 ImDisk 虚拟磁盘都将被卸载!
 卸载 ImDisk 分区...
 正在停止 %s...
 删除剩余组件...
@@ -70,12 +72,12 @@ ImDisk - 安装
 
 ImDisk - 安装
  一般设置
-启用右键菜单
-挂载后不自动打开资源管理器
-恢复隐藏的对话框
+添加到右键菜单
+镜像挂载后不自动打开资源管理器
+恢复隐藏的提示框
  在资源管理器中隐藏以下驱动器: 
-保存设置...
-使用TEMP环境变量
+保存参数...
+包括TEMP环境变量
 确定
 取消
 这些更改只有在重新启动Windows后才会生效！
@@ -100,10 +102,10 @@ GB
 设置TEMP环境变量...
 最小: %d %s
 最大: %d %s
-与一次性直接分配全部内存不同，内存只在实际使用时才分配。#导致性能损失#但如果您只使用内存的一小部分#则可以节省大量内存。
-卸载所选ImDisk驱动器并将其删除
+速度较慢#与一次性直接分配全部内存不同，内存只在实际使用时才分配。#但如果您只使用内存的一小部分，则可以节省大量内存。
+卸载所选ImDisk驱动器并将其删除。
 默认：NTFS.#*FAT*文件系统通常速度更快，但功能较少#FAT和FAT32在最大卷大小方面也有限制。
-设置RamDisk开机挂载.#可以选择多个。
+设置RamDisk开机挂载.#可以多选。
 在卷的根目录下创建TEMP文件夹##要创建其他目录, 在“数据” 标签页声明你想要创建的目录.
 
 高级
@@ -125,35 +127,35 @@ GB
 16 KB
 32 KB
 64 KB
-较大的簇通常速度更快，但会使用更多的磁盘空间，特别是对于大量文件来说。
-标签大小受文件系统限制:#NTFS-32字符, *FAT*-11字符.
-默认: 禁用.##快速格式化. 它可以加速RamDisk创建，但分配的内存不会立即显示为Windows任务管理器中使用的内存。
-默认: 禁用.##允许在写入RamDisk之前对文件进行压缩。#仅适用于NTFS文件系统。#如果您更关心速度，请不要选中该选项！#不推荐与动态内存分配一同使用，因为可能导致内存无法释放。
+较大的簇通常速度更快，但会使用更多的磁盘空间，特别是在有大量文件的情况下。
+标签大小受文件系统限制:#NTFS: 32字符, *FAT*: 11字符.
+默认: 禁用.##快速格式化. 可以加快RamDisk创建的过程，但分配的内存不会立即在Windows任务管理器中显示为已使用的内存。
+默认: 禁用.##允许在写入RamDisk之前对文件进行压缩。#仅适用于NTFS文件系统。#如果您更关心速度，请不要选中该选项！#不推荐与动态内存分配一同使用，可能会导致无法正常释放内存。
 默认: 禁用.##通过AWE分配内存.#这保证了内存永远不会被写到页面文件中。##在32位系统上，这也绕过了每个进程2 GB和4 GB的限制#并允许分配与系统管理的内存一样多的内存#(但不能分配非托管内存或不可见内存)。
-默认: 禁用.##使用文件夹而不是驱动器号装载RamDisk。
+默认: 禁用.##装载RamDisk到文件夹而不是分配盘符。
 卸载选定的ImDisk挂载点并将其删除。
-挂载点必须是位于NTFS卷上的空目录。#最多可以设置10个挂载点随Windows启动装载。
-您可以在这里添加GUI尚未使用的任何参数。#例如, "-o rem" 将向驱动器添加可移动属性。#点击 "..." 按钮列出所有参数。
+挂载点必须是位于NTFS卷上的空目录。#最多可以设置10个挂载点在Windows启动时装载。
+您可以在这里添加GUI尚未支持的任何参数。#例如, "-o rem" 将向驱动器添加可移动属性。#点击 "..." 按钮列出所有参数。
 
 数据
-从镜像文件或文件夹复制内容:
-在关机时同步
+从镜像文件或文件夹加载:
+关机时同步
 仅复制具有“归档”属性的文件
 删除从RamDisk中删除的数据
 排除的文件夹:
 立即同步
-您选择了一个文件夹，那么创建RamDisk时#将它的全部内容复制到RamDisk#包括文件属性和acl，具体取决于使用的文件系统。##一个映像文件必须是原始的(不包含分区信息)#这样的映像可以通过右键单击资源管理器中的驱动器号：#“将磁盘内容另存为映像文件”来创建。
-默认: 禁用.##根据以下参数，在系统关闭时将数据从RamDisk复制到文件夹或映像文件。
-每行一个文件夹。#不要添加RamDisk(驱动器号或挂载点的根目录)。
+如果选择的是一个文件夹，那么在创建RamDisk时#会将它的全部内容复制到RamDisk#包括文件属性和ACL，具体取决于使用的文件系统。##仅支持RAW类型的磁盘镜像(不包含分区信息)#这样的镜像可以通过右键单击资源管理器中的驱动器号：#“将磁盘内容另存为镜像文件”来创建。
+默认: 禁用.##根据以下参数，在系统关闭时将数据从RamDisk复制到文件夹或镜像。
+每行一个文件夹。#相对路径(相对于驱动器号或挂载点的根目录)。
 立即同步所有的RamDisk。
 
-与动态内存分配一同使用AWE 需要本地用户组策略需要具有锁定页面文件的权限。#如果选择继续，将为Administrators组授予此权限。##是否要继续？
+在动态内存盘中使用AWE需要在本地组策略中锁定内存中的页面的权限。#如果选择继续，将为Administrators用户组授予此权限。##是否要继续？
 成功授予权限#此更改需要注销才能生效#立即注销？
 错误：无法授予权限。
 
 就绪
 开始处理...
-错误：大小必须至少为 %d KB.
+错误：大小至少为 %d KB.
 错误：大小不能超过 %d %cB.
 错误：大小不正确。
 错误：未选择空文件夹。
@@ -163,11 +165,12 @@ GB
 卸载当前卷...
 错误：无法卸载卷。
 挂载新的 RamDisk...
-错误：无法检索装目标载点。
+错误：无法获取目标装载点。
 错误：文件不包含有效的文件系统。
 错误：无法格式化卷。
 错误：无法装入卷。
 复制文件...
+错误: 无法复制文件。
 显示新驱动器...
 保存参数...
 警告：挂载点过多#此挂载点将不会保存
@@ -176,13 +179,17 @@ GB
 卸载卷...
 同步...
 
- TEMP 环境变量 
- User 
- System 
-全部设置为:
+使用TEMP环境变量
+User:
+System:
+全部设为:
+使用 junction 创建符号链接 (推荐)
+源目录:
+目标目录:
 设为默认
 确定
 取消
+错误: 无法使用 junction 创建符号链接。
 
 内存释放方法:
 自动
@@ -191,20 +198,20 @@ TRIM 命令
  空闲空间擦除参数 
 使用TRIM命令时，将忽略这些参数。
 要清理的最小数据量：
-两次清理之间的最短时间：
+两次清理之间的最短间隔：
 清理前的最大活动：
-Seconds
+秒
 MB/s
 分配的内存块的大小：
 确定
 取消
-"自动" 使用TRIM命令(如果可用)。它的效率要高得多#但需要NTFS和Windows7或更高版本##否则将使用下面的三个参数调用cleanup功能,#使用0填充，擦除整个空白区域#(因为用0填充的数据块会自动释放)。
-默认: 20.##每个分配的内存块的字节数，幂为2的值。#最小值为 12 (4 KB)，8 KB使用13，16 KB使用14,# 最大 30 (1 GB).##在文件碎片很多的情况下，较低的值可以减少内存使用并提高清理功能的效率#但也会降低性能。
-默认: 10.##仅当可以释放此容量的内存量时，#才会运行cleanup功能。该值是总驱动器空间的比率#(例如：4 GB驱动器的10/1000=40 MB)。#这只是一个估计值：实际释放的内存量可以稍高或更低。
-默认: 10.##较低的值可以使清理效率更高，但在定期删除而不重新创建文件的情况下可能不适用。
-默认: 10.##等待读写操作低于此值，然后再清理。
+"自动"模式将会尝试使用效率更高的TRIM命令。#需要NTFS和Windows7或更高版本的Windows##否则，根据下面的三个参数在需要的时候调用清理功能#清理功能用0填充所有需要释放的区域#(因为用0填充的数据块会自动释放)。
+默认: 20.##每个分配的内存块的字节数，以2的幂数计算。#最小值为 12 (4 KB)，13(8 KB)，14(16 KB),# 最大 30 (1 GB).##在文件碎片很多的情况下，较低的值可以减少内存使用并提高清理功能的效率#但也会降低性能。
+默认: 10.##仅当可以释放此容量的内存量时，#才会运行清理功能。该值是总驱动器空间的百分比#(例如：4 GB驱动器的10/1000=40 MB)。#这只是一个估计值：实际释放的内存量可以稍高或更低。
+默认: 10.##较低的值可以使清理间隔更低，但可能不适用在定期删除而不重新创建文件的情况下。
+默认: 10.##等待磁盘传输速率低于此值，然后再清理。
 
-警告: Windows的快速启动功能已启用。 这可能会导致一些问题。:##● 系统在关闭时将RamDisk内容写入硬盘驱动器, 并在启动时恢复.#● ImDisk Toolkit的数据同步功能在系统关闭时将会不起作用。##打开电源设置以禁用快速启动。
+警告: Windows的快速启动功能已启用。 这可能会导致一些问题。:##● 系统在关闭时会将RamDisk内容写入硬盘驱动器, 并在启动时将其恢复.#● ImDisk Toolkit的“在系统关闭时同步”的功能将失效。##打开电源设置以禁用快速启动。
 电源设置
 不再显示该警告
 关闭
@@ -232,31 +239,31 @@ ImDisk - 挂载点
 大小
 文件系统
 标签
-从Windows启动中删除选定的映像文件，#然后卸载选定的驱动器或挂载点。
-输入镜像文件名, 使用"..." 按钮选择#或者拖拽选择。#错误的扩展名将导致挂载失败!##如果文件不存在, 系统将提示您#创建新的原始文件。##下拉列表显示在Windows启动时要装载的文件。
+从Windows启动中删除选定的镜像文件，#然后卸载选定的驱动器或挂载点。
+输入镜像文件名, 使用"..." 按钮选择#或者拖放文件。#错误的扩展名将导致挂载失败!##如果文件不存在, 系统将提示您#创建新的原始文件。##下拉列表显示在Windows启动时要装载的文件。
 挂载点必须是位于NTFS卷上的空目录。#如果拖放文件夹，将选择该文件夹作为挂载点。
 “CD/DVD”适用于ISO、BIN和NRG文件，#“软盘”适用于VFD文件，“硬盘”适用于其他格式。
-如果映像文件不包含或只包含一个分区，则输入1。#0表示整个映像：分区表(如果有的话)将被覆盖。
+如果镜像文件不包含或只包含一个分区，则输入1。#0 则表示整个镜像文件：分区表(如果有的话)将被覆盖。
 防止写入镜像文件。
-这通常会禁用写缓存：#数据会立即写入映像文件#但是这可能会降低性能。
-设置要在windows启动时装载的映像文件和参数##最多可设置64000个映像文件。
+这通常会禁用写缓存：#数据会立即写入镜像文件#这将会降低性能。
+设置要在windows启动时装载的镜像文件和参数##最多可设置64000个镜像文件。
 
 装载时出错。#请检查参数。
 错误: 所选挂载点的文件系统不被支持。
-所选目录已是挂载点。##如果选择继续，先前装载的卷将无法通过此挂载点访问。##是否仍要继续？
+所选目录已经是挂载点。##如果选择继续，先前装载的卷将无法通过此挂载点访问。##是否仍要继续？
 错误: 所选挂载点不是空目录。
 错误: 选定的驱动器号已在使用中。
 错误: 无法创建服务
 
-无效文件系统
-卷不包含有效的文件系统。##您想做什么？
+无效的文件系统
+卷不包含有效的文件系统。##您想如何处理？
 卸载
 格式化
 退出
 
 创建新镜像文件
-该文件不存在。#是否要创建新的原始镜像文件？
-        文件大小:#        (至少 65KB)
+该文件不存在。#是否要创建新的RAW镜像文件？
+        文件大小:#        (最小 65KB)
 挂载
 创建
 取消
@@ -272,9 +279,9 @@ PB
 
 
 [ImDisk-Dlg]
-警告: 您没有足够的权限正确卸载此卷。#写入缓冲区可能未被刷新，因此存在数据丢失的风险。##是否仍要继续？
-该卷正在由另一个进程使用，无法锁定。##如果保存了所有数据，您可以安全地继续，并且该卷将被正确卸载。##是否要继续？
-虚拟磁盘已被修改。##在删除虚拟磁盘之前，是否将其另存为映像文件？
+警告: 您没有足够的权限安全地卸载此卷。#写入缓冲区可能未被刷新，因此存在数据丢失的风险。##是否仍要继续？
+该卷正在由另一个进程使用，无法锁定。##如果已经保存了所有数据，您可以安全地继续，并且该卷将被正确卸载。##是否要继续？
+虚拟磁盘已被修改。##在删除虚拟磁盘之前，是否将其另存为镜像文件？
 不再显示该警告
 不再询问
 确定
@@ -296,22 +303,22 @@ PB
 
  保存磁盘镜像 
 镜像文件:
-镜像文件中的偏移:
-在文件的开头写MBR。
+镜像文件偏移量:
+在文件的开头写入MBR。
 确定
 取消
 镜像文件
 ISO 镜像
 全部文件
-%s 已锁定并且准备就绪。
-%s 正在被另一个程序使用，无法锁定。#因此，文件可能在复制时被修改。
+%s 已被锁定并且准备就绪。
+%s 正在被另一个程序使用，且无法锁定。#因此，文件可能在复制时被修改。
 正在保存 %s ... %u%%
 卷 %s 成功保存到 %s.
 不支持的驱动器类型。
-检索卷属性时出错。
+获取卷属性时出错。
 无法打开镜像文件。
 无法分配内存。
-创建新MBR时出错。
+创建新的MBR时出错。
 写入MBR时出错。
 设置文件指针时出错。
 读取错误。
