--- a/install/lang/russian.txt
+++ b/install/lang/russian.txt
@@ -11,7 +11,6 @@ ImDisk - Установка
 Добавить команды в контекстное меню
 Создать ярлыки на рабочем столе
 Общие ярлыки (для всех пользователей)
-Запускать ImDskSvc автоматически
 Язык:
 Пожалуйста, наведите указатель на элемент списка для получения информации.
 Установка драйвера. Также добавляет апплет Панели Управления, утилиту командной строки imdisk.exe, интерфейс управления из контекстного меню Проводника.##После установки можно ввести "imdisk" в командной строке для справки.
@@ -20,7 +19,6 @@ ImDisk - Установка
 Добавить команды в контекстное меню дисков и файлов для управления томами и образами прямо из Проводника.##Это можно сделать и позднее, с помощью ярлыка в меню Пуск.
 Создать ярлыки на рабочем столе.##Папка с ярлыками в меню Пуск будет создана в любом случае.
 Создать общие ярлыки (для всех пользователей), а не только для себя.
-Запускать ImDskSvc автоматически при загрузке системы.##Программы пакета не используют эту службу, поэтому можно не помечать опцию. Служба создается драйвером для возможности подключения по TCP/IP или через последовательный порт.
 Создатели
 Установка
 Отмена
@@ -183,7 +181,7 @@ OK
 Личная:
 Системная:
 Установить в:
-Использовать точку соединения Junction (рекомендуется)
+Использовать точку соединения Junction
 из:
 в:
 Стандартные
