--- a/install/lang/schinese.txt
+++ b/install/lang/schinese.txt
@@ -11,7 +11,6 @@ RamDisk 配置工具
 添加右键菜单选项
 创建桌面快捷方式
 为所有用户创建快捷方式
-开机启动 ImDskSvc
 语言:
 请将鼠标悬停在选项上以获取详细说明.
 安装驱动程序。这包括控制面板插件、命令行工具、imdisk.exe，以资源管理器右键菜单项。#请在命令提示符中键入“imdisk”以获取详细信息。
@@ -20,7 +19,6 @@ RamDisk 配置工具
 为“驱动器”和“文件”添加右键菜单。##此选项可以稍后在Windows“开始”菜单中设置。
 创建桌面快捷方式。##同时也会在在Windows“开始”菜单中创建快捷方式。
 为所有用户创建快捷方式，而不是只为当前用户创建快捷方式。
-在系统启动时启动ImDskSvc。#此软件包中没有任何工具使用此服务，因此您可以安全地取消选中此选项。#随驱动程序安装，用于启动TCP/IP或串行端口与代理软件的连接。
 贡献者/鸣谢
 安装
 取消
@@ -183,7 +181,7 @@ GB
 User:
 System:
 全部设为:
-使用 junction 创建符号链接 (推荐)
+使用 junction 创建符号链接
 源目录:
 目标目录:
 设为默认
