--- a/install/lang/swedish.txt
+++ b/install/lang/swedish.txt
@@ -11,7 +11,6 @@ RamDisk Configuration Tool
 Aktivera kontextmenyposter
 Skapa genvägar på skrivbordet
 Genvägar för alla användare
-Starta ImDskSvc automatiskt
 Språk:
 Håll muspekaren över ett objekt för info.
 Installerar drivrutin. Detta inkluderar en kontrollpanelpost, ett kommandoradsverktyg, imdisk.exe, och användargränssnitt för att hantera volymer från utforskarens kontextmeny.##Skriv "imdisk" i kommandotolken för info.
@@ -20,7 +19,6 @@ Detta verktyg låter dig enkelt konfigurera en eller flera RamDiskar med variera
 Lägger till poster i disk- och filkontext för att hantera ImDisk-volymer och avbildsfiler direkt från Utforskaren.##Detta alternativ kan aktiveras senare, i Windows startmeny.
 Skapar genvägar på skrivbordet.##Alla genvägar skapas alltid i Windows startmeny.
 Skapa genvägar för alla användare istället för nuvarande användare.
-Starta ImDskSvc automatiskt vid systemstart.##Inget verktyg i det här paketet använder denna tjänst, så du kan riskfritt avmarkera detta alternativ.##Det installeras av drivrutinen för att initiera TCP/IP eller serieportanslutningar med proxy-mjukvara.
 Tack
 Installera
 Avbryt
@@ -183,7 +181,7 @@ Använd TEMP-variabeln
 Användare:
 System:
 Ange alla som:
-Skapa koppling (rekommenderas)
+Skapa koppling
 från:
 till:
 Ange standard
