--- a/install/lang/brazilian-portuguese.txt
+++ b/install/lang/brazilian-portuguese.txt
@@ -45,6 +45,7 @@ Traduções:
 - italiano: Ajeje Brazorf
 - português brasileiro: Rodolfo Bendinelli
 - suomi: Sampo Hippeläinen
+- magyar: I. Horváth Ferenc
 
 Configurações Gerais
 Desinstalar
