--- a/install/lang/english.txt
+++ b/install/lang/english.txt
@@ -45,6 +45,7 @@ Translations:
 - italiano: Ajeje Brazorf
 - português brasileiro: Rodolfo Bendinelli
 - suomi: Sampo Hippeläinen
+- magyar: I. Horváth Ferenc
 
 General Settings
 Uninstall
