--- a/install/lang/french.txt
+++ b/install/lang/french.txt
@@ -45,6 +45,7 @@ Traductions :
 - italiano: Ajeje Brazorf
 - português brasileiro: Rodolfo Bendinelli
 - suomi: Sampo Hippeläinen
+- magyar: I. Horváth Ferenc
 
 Réglages Généraux
 Désinstaller
