--- a/install/lang/swedish.txt
+++ b/install/lang/swedish.txt
@@ -45,6 +45,7 @@ ImDisk - Tack!
 - italiano: Ajeje Brazorf
 - português brasileiro: Rodolfo Bendinelli
 - suomi: Sampo Hippeläinen
+- magyar: I. Horváth Ferenc
 
 Allmänna inställningar
 Avinstallera
