--- a/install/lang/russian.txt
+++ b/install/lang/russian.txt
@@ -46,6 +46,7 @@ ImDisk - Создатели
 - Português Brasileiro: Rodolfo Bendinelli
 - suomi: Sampo Hippeläinen
 - magyar: I. Horváth Ferenc
+- 한국어: 비너스걸💋 (VenusGirl)
 
 Основные настройки
 Удаление
