--- a/install/lang/schinese.txt
+++ b/install/lang/schinese.txt
@@ -46,6 +46,7 @@ ImDisk - 贡献者/鸣谢
 - português brasileiro: Rodolfo Bendinelli
 - suomi: Sampo Hippeläinen
 - magyar: I. Horváth Ferenc
+- 한국어: 비너스걸💋 (VenusGirl)
 
 一般设置
 卸载
