--- a/install/lang/swedish.txt
+++ b/install/lang/swedish.txt
@@ -46,6 +46,7 @@ ImDisk - Tack!
 - português brasileiro: Rodolfo Bendinelli
 - suomi: Sampo Hippeläinen
 - magyar: I. Horváth Ferenc
+- 한국어: 비너스걸💋 (VenusGirl)
 
 Allmänna inställningar
 Avinstallera
