--- a/install/lang/brazilian-portuguese.txt
+++ b/install/lang/brazilian-portuguese.txt
@@ -46,6 +46,7 @@ Traduções:
 - português brasileiro: Rodolfo Bendinelli
 - suomi: Sampo Hippeläinen
 - magyar: I. Horváth Ferenc
+- 한국어: 비너스걸💋 (VenusGirl)
 
 Configurações Gerais
 Desinstalar
