--- a/install/lang/english.txt
+++ b/install/lang/english.txt
@@ -46,6 +46,7 @@ Translations:
 - português brasileiro: Rodolfo Bendinelli
 - suomi: Sampo Hippeläinen
 - magyar: I. Horváth Ferenc
+- 한국어: 비너스걸💋 (VenusGirl)
 
 General Settings
 Uninstall
