--- a/install/lang/finnish.txt
+++ b/install/lang/finnish.txt
@@ -46,6 +46,7 @@ Käännökset:
 - português brasileiro: Rodolfo Bendinelli
 - suomi: Sampo Hippeläinen
 - magyar: I. Horváth Ferenc
+- 한국어: 비너스걸💋 (VenusGirl)
 
 Yleiset asetukset
 Poista asennus
