--- a/install/lang/french.txt
+++ b/install/lang/french.txt
@@ -46,6 +46,7 @@ Traductions :
 - português brasileiro: Rodolfo Bendinelli
 - suomi: Sampo Hippeläinen
 - magyar: I. Horváth Ferenc
+- 한국어: 비너스걸💋 (VenusGirl)
 
 Réglages Généraux
 Désinstaller
