--- a/install/lang/german.txt
+++ b/install/lang/german.txt
@@ -46,6 +46,7 @@ ImDisk - Mitwirkende
 - português brasileiro: Rodolfo Bendinelli
 - suomi: Sampo Hippeläinen
 - magyar: I. Horváth Ferenc
+- 한국어: 비너스걸💋 (VenusGirl)
 
 Allgemeine Einstellungen
 Deinstallation
