--- a/install/lang/hungarian.txt
+++ b/install/lang/hungarian.txt
@@ -46,6 +46,7 @@ Fordítások:
 - português brasileiro: Rodolfo Bendinelli
 - suomi: Sampo Hippeläinen
 - magyar: I. Horváth Ferenc
+- 한국어: 비너스걸💋 (VenusGirl)
 
 Általános beállítások
 Eltávolítás
