--- a/install/lang/italian.txt
+++ b/install/lang/italian.txt
@@ -46,6 +46,7 @@ Traduzioni:
 - português brasileiro: Rodolfo Bendinelli
 - suomi: Sampo Hippeläinen
 - magyar: I. Horváth Ferenc
+- 한국어: 비너스걸💋 (VenusGirl)
 
 Impostazioni Generali
 Disinstalla
